# 19729 Usability: Nice if "drag to add activity/absence" could be reached from both mousebuttons. And some test-updates for #19500

--- a/Teleopti.Ccc.WpfControls/Controls/Time/Timeline/TimelineControlView.xaml
+++ b/Teleopti.Ccc.WpfControls/Controls/Time/Timeline/TimelineControlView.xaml
@@ -96,10 +96,12 @@
         </DataTemplate>
         </ResourceDictionary>
     </UserControl.Resources>
+        
+
     <Grid Background="{StaticResource RaptorStandardGradientBrush}" >
         <Grid.ContextMenu>
 
-            <ContextMenu  >
+            <ContextMenu x:Name="TimeLineContextMenu"  IsVisibleChanged="ContextMenu_IsVisibleChanged" MouseLeftButtonUp="TimelineControlView_PreviewMouseUp" MouseLeftButtonDown="TimelineControlView_PreviewMouseUp">
                 <MenuItem Command="{x:Static Editor:ShiftEditorRoutedCommands.AddActivityWithPeriod}"/>
                 <MenuItem Command="{x:Static Editor:ShiftEditorRoutedCommands.AddAbsenceWithPeriod}"/>
                 <MenuItem Command="{x:Static Editor:ShiftEditorRoutedCommands.AddOvertimeWithPeriod}"/>
