--- a/Teleopti.Ccc.WpfControls/Controls/Time/Timeline/TimelineControlView.xaml
+++ b/Teleopti.Ccc.WpfControls/Controls/Time/Timeline/TimelineControlView.xaml
@@ -7,7 +7,8 @@
     xmlns:Views="clr-namespace:Teleopti.Ccc.WpfControls.Controls.Time.Timeline.Views"
     xmlns:Common="clr-namespace:Teleopti.Ccc.WinCode.Common;assembly=Teleopti.Ccc.WinCode"
     xmlns:GuiHelpers="clr-namespace:Teleopti.Ccc.WinCode.Common.GuiHelpers;assembly=Teleopti.Ccc.WinCode"
-    xmlns:Editor="clr-namespace:Teleopti.Ccc.WinCode.Scheduling.Editor;assembly=Teleopti.Ccc.WinCode">
+    xmlns:Editor="clr-namespace:Teleopti.Ccc.WinCode.Scheduling.Editor;assembly=Teleopti.Ccc.WinCode"
+                 xmlns:Timeline="clr-namespace:Teleopti.Ccc.WpfControls.Controls.Time.Timeline">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -67,7 +68,8 @@
                             </MultiBinding>
                         </Controls:AnalogPresenter.DataContext>
                     </Controls:AnalogPresenter>
-                
+
+                    <TextBlock Grid.Column="2" Text="{Binding ElapsedTime, RelativeSource={RelativeSource FindAncestor, AncestorType=Timeline:TimelineControlView}, StringFormat=t,Converter={StaticResource TimeSpanToStringConverter}}" FontWeight="Bold"  VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="16" Opacity="0.8"/>
                 
                     <Controls:AnalogPresenter  Grid.Column="3" VerticalAlignment="Stretch" Height="30" Width="30" >
                         <Controls:AnalogPresenter.DataContext>
