#19744: adding favicon as link directive
--HG--
branch : Release 7.2.362

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MobileReports/Views/Shared/MobileLayoutBase.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MobileReports/Views/Shared/MobileLayoutBase.cshtml
@@ -8,6 +8,7 @@
 	<title>@ViewBag.Title</title>
 	<link rel="stylesheet" href="@Url.Content("~/Content/themes/mobile/mobile.min.css")" />
 	<link rel="stylesheet" href="@Url.Content("~/Content/Mobile/jquery.mobile.structure-1.0.1.min.css")" />
+	<link href="@Url.Content("~/content/favicon.ico")" rel="shortcut icon" type="image/x-icon"/>
 	@RenderSection("csshead", required: false)
 	<script>
 		if (!window.console) { window.console = { log: function () { } }}
