--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Shared/_LayoutBase.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Shared/_LayoutBase.cshtml
@@ -18,6 +18,7 @@
 	<link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
 	<link href="@Url.Content("~/Areas/Start/Content/Css/Site.css")" rel="stylesheet" type="text/css" />
 	<link href="@Url.Content("~/Areas/Start/Content/Css/jquery.ui.custom.css")" rel="stylesheet" type="text/css" />
+	<link href="@Url.Content("~/content/favicon.ico")" rel="shortcut icon" type="image/x-icon"/>
 
 	<script src="@Url.Content("~/Content/Scripts/jquery-1.6.4.js")"></script>
 	<script src="@Url.Content("~/Content/Scripts/jquery.ba-hashchange.min.js")"></script>
