--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
@@ -30,6 +30,7 @@
 	<link href="@Url.Content("~/Areas/MyTime/Content/Css/jquery.ui.selectbox.css")" rel="stylesheet" type="text/css" />
 	<link href="@Url.Content("~/Areas/MyTime/Content/Css/jquery.ui.labeledinput.css")" rel="stylesheet" type="text/css" />
 	<link href="@Url.Content("~/Areas/MyTime/Content/Css/jquery.ui.connector.css")" rel="stylesheet" type="text/css" />
+	<link href="@Url.Content("~/content/favicon.ico")" rel="shortcut icon" type="image/x-icon"/>
 
 	<script src="@Url.Content("~/Content/Scripts/jquery-1.6.4.js")"></script>
 	<script src="@Url.Content("~/Content/Scripts/jquery.ba-hashchange.min.js")"></script>
