--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -92,15 +92,18 @@
 		<label class="displayblock" for="Schedule-addRequest-message-input">@Resources.Message</label>
 		<textarea id="Schedule-addRequest-message-input" />
 	</div>
-	<div id="Absence-type-element" class="edit-module-element floatleft displaynone">
-		<div class="floatleft absence-input-label">@Resources.AbsenceType</div>
+	<div id="Absence-type-element" class="floatleft displaynone">
+		<div class="edit-module-element floatleft">
+			<div class="floatleft absence-input-label">@Resources.AbsenceType</div>
+		</div>
+		<div class="edit-module-element floatleft">
 		<select id="Absence-type" class="floatleft absence-input combobox tooltip-dropdown-menu">
 			@foreach (var absenceType in Model.AbsenceTypes)
    {
 				<option value="@Html.AttributeEncode(absenceType.Id)">@absenceType.Name</option>
    }
 		</select>
-		
+		</div>
 	</div>
 	<div class="edit-module-element floatleft">
 		<input id="Schedule-addRequest-fromDate-input" class="date-input" type="text" value="@DateTime.Today.ToShortDateString()" />
