--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Requests/RequestsPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Requests/RequestsPartial.cshtml
@@ -31,7 +31,7 @@
 		
 		<div id="Absence-type-element" class="edit-module-element floatleft displaynone pdr20">
 			<div class="floatleft absence-type-input-label">@Resources.AbsenceType</div>
-			<select id="Absence-type" class="floatleft absence-input combobox tooltip-dropdown-menu">
+			<select id="Absence-type" class="floatleft absence-input combobox">
 				@foreach (var absenceType in Model.AbsenceTypes)
 				{
 					<option value="@Html.AttributeEncode(absenceType.Name)" typeid="@Html.AttributeEncode(absenceType.Id)">@absenceType.Name</option>
