more safe behavior tests for SA

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/StudentAvailability/StudentAvailabilityPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/StudentAvailability/StudentAvailabilityPartial.cshtml
@@ -91,7 +91,7 @@
 			<div id="StudentAvailability-edit-error" class="error floatleft">
 			</div>
 			<div class="floatright">
-				<input id="StudentAvailability-edit-ok-button" type="button" class="button mb5" value="@Html.AttributeEncode(Resources.Save)"/>
+				<input id="StudentAvailability-edit-ok-button" type="button" disabled="disabled" class="button mb5" value="@Html.AttributeEncode(Resources.Save)"/>
 				<input id="StudentAvailability-edit-cancel-button" type="button" class="button cancel mb5" value="@Html.AttributeEncode(Resources.Cancel)" />
 			</div>
 		</div>
