--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Requests/RequestsPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Requests/RequestsPartial.cshtml
@@ -91,14 +91,16 @@
 					</h3>
 				</div>
 				<div class="request-details">
-					<span class="request-caption">@Resources.Type: </span>
-					<span class="request-data-type"></span>
+					<div>
+						<span class="request-caption">@Resources.Type: </span>
+						<span class="request-data-type pdr20"></span>
+						<span class="request-caption">@Resources.Status: </span>
+						<span class="request-data-status"></span>
+					</div>
 					<span class="request-caption">@Resources.Date: </span>
-					<span class="request-data-date"></span>
+					<span class="request-data-date pdr20"></span>
 					<span class="request-caption">@Resources.UpdatedOn: </span>
 					<span class="request-data-updatedon"></span>
-					<span class="request-caption">@Resources.Status: </span>
-					<span class="request-data-status"></span>
 				</div>
 				<div class="request-text request-data-text">
 				</div>
