oops, wrong text.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Test/AfterScenario.html
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Test/AfterScenario.html
@@ -23,6 +23,6 @@
         }
     </style>
     <body>
-        <h1>Setting up database and state and such...</h1>
+        <h1>Resetting database state and clearing my cookie and such...</h1>
     </body>
 </html>​
