--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/WeekView.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/WeekView.css
@@ -1,8 +1,8 @@
 ﻿.weekview-day li:first-child, .weekdays li{
-	color: #fff; 
+	/*color: #fff; */
 	line-height: 18px; 
 	text-transform: uppercase; 
-	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
+	/*text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);*/
 }
 .weekview-day li:first-child, .weekview-day li.second, .weekdays li, .calendarview-week li .day-header{
 	 background-color: transparent;
@@ -10,7 +10,11 @@
 	 min-height: 19px;
 	 padding: 0; 
 }
-.weekview-day li.second, .calendarview-week li .day-header{color: #2b90b3; text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.5);}
+/*.weekview-day li.second, .calendarview-week li .day-header{color: #2b90b3; text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.5);}*/
+.weekview-day li.second, .calendarview-week li .day-header {
+	border-top: 1px solid  #f9f9f9;
+	border-bottom: 1px solid #dfdfdf;
+}
 
 .body-weekview-inner ul.today, .body-weekview-inner ul.ui-selected, .calendarview-week li.today, .calendarview-week li.ui-selected{
 	 background-image: url(../Images/view_ul_states_sprite.png);
@@ -18,12 +22,19 @@
 	 background-repeat: repeat-x;
 }
 
-.body-weekview{background: #f8f8f8 url(../Images/view_repeater_bg.png) bottom left repeat-y;}
-.body-weekview-inner{background: transparent url(../Images/view_top_bg.png) top left no-repeat; font-size: 0;}
+/*.body-weekview{background: #f8f8f8 url(../Images/view_repeater_bg.png) bottom left repeat-y;}*/
+.body-weekview{}
+/*.body-weekview-inner{background: transparent url(../Images/view_top_bg.png) top left no-repeat; font-size: 0;}*/
+.body-weekview-inner {
+	border: 1px solid rgba(0, 0, 0, 0.15);
+	background: #f8f8f8;
+	font-family: Verdana;
+}
 .body-weekview-inner ul.today{background-position: 0 0; text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.5);}
 
 .body-weekview-inner ul.ui-selected{background-position: 0 -2000px;}
-.body-weekview-inner ul:first-child{margin-left: 19px;}
+/*.body-weekview-inner ul:first-child{margin-left: 19px;}*/
+.body-weekview-inner ul:first-child{}
 
 .weekview-day
 {
@@ -35,7 +46,7 @@
 	padding: 0; 
 	text-align: center;
 	vertical-align: top;
-	width: 133px;
+	width: 131px;
 }
 @media screen and (-webkit-min-device-pixel-ratio:0) {
 .weekview-day /* Safari inline-block fix */
@@ -56,11 +67,13 @@
 
 .weekview-day
 {
+	margin: 0;
 	border-left: 1px solid #f9f9f9;
 	border-right: 1px solid #dfdfdf;
 }
 .rgba .weekview-day
 {
+	margin: 0;
 	border-left: 1px solid rgba(255, 255, 255, 0.7);
 	border-right: 1px solid rgba(0, 0, 0, 0.15);
 }
@@ -68,14 +81,10 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
 	.rgba .weekview-day
 	{
-		border-left: 1px solid #f9f9f9;
+		margin: 0;
+		border-left: 1px solid #dfdfdf;
 		border-right: 1px solid #dfdfdf;
 	}
-}
-
-.weekview-day li
-{
-	min-height: 45px;
 }
 .weekview-day li
 {
@@ -109,18 +118,49 @@
 	width: 4px;
 }
 
-.weekview-day li:first-child, .weekview-day li.second{ border: 0px; cursor: pointer;}
+.weekview-day li:first-child, .weekview-day li.second 
+{
+	border-top: 1px solid  #f9f9f9;
+	border-bottom: 1px solid #dfdfdf;
+    cursor: pointer;
+}
 
 .weekview-day li:first-child div, .weekview-day li.second div{padding: 0; border-left-width: 0; border-right-width: 0;}
 
 .weekview-day.second{background: transparent url(../Images/date_field_bg.gif) top left repeat-x;}
-.weekview-day li.third{border-top: 0px;}
+.weekview-day li.third 
+{
+	height: 60px;
+	/*border-top: 0px;
+	border-left-style: solid; 
+	border-left-width: 8px; */
+	border-top: 1px solid  #f9f9f9;
+	border-bottom: 1px solid #dfdfdf;
+}
+.rgba .weekview-day li.third 
+{
+	height: 60px;
+	/*border-top: 0px;
+	border-left-style: solid; 
+	border-left-width: 8px;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.15); */
+	border-top: 1px solid rgba(255, 255, 255, 0.5);
+}
+.weekview-day li.dayoff 
+{
+	height: 60px;
+	border-left-color: beige;
+	border-right-color: beige;
+	background-color: beige;
+	background-image: url(../Images/stripe.png);
+	border-left-width: 8px;
+}
 .weekview-day li.empty{border-top-color: transparent; border-bottom-color: transparent;}
 .weekview-day > li > div {
-	padding: 10px 5px; 
+	/*padding: 10px 5px; 
 	border-left-style: solid; 
 	border-left-width: 8px; 
-	border-left-color: transparent;
+	border-left-color: transparent;*/
 }
 .weekview-day li div.meeting {
 	bottom: 10px;
@@ -201,4 +241,36 @@ select.absence-input
 .rtl input.absence-input
 {
     padding-right: 20px;
+}
+.week-schedule-layer {
+	width: 131px;
+	border-radius: 2px;
+	border-left: 0px;
+	background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .6) 100%);
+}
+.weekview-day-schedule {
+	width: 131px;
+	height: 580px;
+}
+.weekview-day-schedule .tooltip {
+	position: absolute;
+}
+.weekview-timeline {
+	width: 32px;
+	height: 580px;
+	background: transparent;
+}
+.weekview-timeline-label {
+	border: 1px solid rgba(0, 0, 0, 0.15);
+	font-size: 6pt;
+	border-radius: 2px;
+	width: 30px;
+	height: 10px;
+	text-align: center;
+}
+.fourth {
+	height: 15px;
+}
+.category {
+	background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .6) 100%);
 }
