--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -4,16 +4,28 @@
 @using Teleopti.Interfaces.Domain
 @model WeekScheduleViewModel
 @{
+	const int scheduleHeight = 580;
 	Layout = null;
 }
 <div id="ScheduleWeek-body" class="body-weekview clearfix" data-mytime-periodselection='@Html.Schedule().PeriodSelectionAsJson(Model.PeriodSelection)'>
 	<style>
 		@foreach (var style in Model.Styles)
 		{
-			@string.Format(".weekview-day li.{0} div {{border-left-color: {1}; border-right-color: {1};}}\n", style.Name, style.ColorHex)
+			@*@string.Format(".weekview-day li.{0} div {{border-left-color: {1}; border-right-color: {1};}}\n", style.Name, style.ColorHex)
+			@string.Format("li.third.{0} {{border-left-color: {1}; border-right-color: {1};}}\n", style.Name, style.ColorHex)
+			@string.Format("li.third.{0} {{border-left-width: 8px; border-left-color: {1}; border-right-color: {1};}}\n", style.Name, style.ColorHex)*@
+			@string.Format("li.third.{0} {{border-left-width: 8px; background-color: {1}; border-right-color: {1};}}\n", style.Name, style.ColorHex)
 		}
 	</style>
 	<div id="ScheduleWeek-body-inner" class="body-weekview-inner clearfix">
+		<div class="weekview-timeline floatleft">
+			@foreach (var time in Model.TimeLine)
+			{
+				<div class="weekview-timeline-label absolute" style="top: @(Math.Round(scheduleHeight * time.PositionPercentage) + 198)px;">
+					@time.Time
+				</div>
+			}
+		</div>
 		@foreach (var day in Model.Days)
 		{
 			<ul class="weekview-day" data-mytime-date="@day.FixedDate" data-request-default-date="@day.Date" data-mytime-state="@Html.Schedule().FormatState(day.State)">
@@ -26,14 +38,14 @@
 						<span class="floatright mr5">@day.Header.DayNumber</span>
 					</div>
 				</li>
-				<li class="@Html.AttributeEncode(day.Summary.StyleClassName) third">
-					<div>
-						<span class="fullwidth displayblock">@day.Summary.Title</span>
-						<strong class="fullwidth displayblock">@day.Summary.TimeSpan</strong>
-						@day.Summary.Summary
-					</div>
+				<li class="@Html.AttributeEncode(day.Summary.StyleClassName) third category">
+					
+					<strong class="fullwidth displayblock">@day.Summary.Title</strong>
+					<span class="fullwidth displayblock">@day.Summary.TimeSpan</span>
+					@day.Summary.Summary
+					
 				</li>
-				<li id="day-summary" @(Model.RequestPermission.TextRequestPermission? "class=add-text-request":"")>
+				<li id="day-summary" @(Model.RequestPermission.TextRequestPermission ? @Html.Raw("class=\"add-text-request fourth\"") : @Html.Raw("class=\"fourth\""))>
 					<div class="relative">
 						<div class="text-request absolute" @(day.TextRequestCount > 0 ? "" : "style=display:none") title="@(string.Format(Resources.XRequests, day.TextRequestCount))">
 							<div class="floatright extrasmall">@day.TextRequestCount</div>
@@ -49,20 +61,32 @@
 						}
 					</div>
 				</li>
-				@foreach (var period in day.Periods)
-				{
-					<li class="@period.StyleClassName">
-						<div>
-							<strong class="fullwidth displayblock">@period.TimeSpan</strong>
-							<div class="truncate">@period.Title</div>
+				<li class="weekview-day-schedule relative">
+					@foreach (var period in day.Periods)
+					{
+						@*<li class="@period.StyleClassName">
+							<div>
+								<strong class="fullwidth displayblock">@period.TimeSpan</strong>
+								<div class="truncate">@period.Title</div>
+								@if (period.Meeting != null)
+								{
+									<div class="icon meeting tooltip floatright" tooltip-text="<div><dl><dt>Subject: </dt><dd> @period.Meeting.Title </dd><dt>Location: </dt><dd> @period.Meeting.Location </dd></dl></div>"></div>
+								}
+							</div>
+						</li>*@
+						var topPixel = (Math.Round(scheduleHeight * period.StartPositionPercentage));
+						var bottomPixel = (Math.Round(scheduleHeight * period.EndPositionPercentage));
+						var heightPixel = bottomPixel - topPixel;
+						<div class="week-schedule-layer absolute tooltip" tooltip-title="@period.Title" tooltip-text="@period.TimeSpan"
+							 style="background-color: @(period.Color); height: @(heightPixel)px; top: @(topPixel)px;">
+							<strong class="truncate">@period.Title</strong>
+							<span class="fullwidth displayblock">@period.TimeSpan</span>
 							@if (period.Meeting != null)
 							{
 								<div class="icon meeting tooltip floatright" tooltip-text="<div><dl><dt>Subject: </dt><dd> @period.Meeting.Title </dd><dt>Location: </dt><dd> @period.Meeting.Location </dd></dl></div>"></div>
 							}
 						</div>
-					</li>
-				}
-				<li>
+					}
 				</li>
 			</ul>
 		}
@@ -70,7 +94,7 @@
 </div>
 
 
-<div id="Schedule-addRequest-title"class="displaynone">
+<div id="Schedule-addRequest-title" class="displaynone">
 	<span id="Text-request-tab" class="selectable-tab selected-tab">@Resources.TextRequest</span>
 	@if (Model.RequestPermission.AbsenceRequestPermission)
 	{
