--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Menu/Index.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Menu/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model System.Collections.Generic.IEnumerable<Teleopti.Ccc.Web.Areas.Start.Models.Menu.MenuViewModel>
+﻿@model IEnumerable<Teleopti.Ccc.Web.Areas.Start.Models.Menu.MenuViewModel>
 @{
 	Layout = null;
 }
