--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Menu/MobileMenu.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Menu/MobileMenu.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Teleopti.Ccc.UserTexts
-@model System.Collections.Generic.IEnumerable<Teleopti.Ccc.Web.Areas.Start.Models.Menu.MenuViewModel>
+@model IEnumerable<Teleopti.Ccc.Web.Areas.Start.Models.Menu.MenuViewModel>
 @{ Layout = "~/Areas/Start/Views/Shared/MobileLayoutBase.cshtml"; }
 @section csshead {
 	<link rel="stylesheet" href="@Url.Content("~/Areas/Start/Content/Css/mobile.custom.css")" />
