make periods' color 0.2 opacity

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -11,7 +11,7 @@
 	<style>
 		@foreach (var style in Model.Styles)
 		{
-			@string.Format("li.third.{0} {{border-left-width: 8px; background-color: {1}; border-right-color: {1};}}\n", style.Name, style.ColorHex)
+			@string.Format("li.third.{0} {{background-color: {1};}}\n", style.Name, style.ColorHex)
 		}
 	</style>
 	<div id="ScheduleWeek-body-inner" class="body-weekview-inner clearfix">
@@ -63,7 +63,7 @@
 						var heightPixel = bottomPixel - topPixel;
 						if (heightPixel > 32)
 						{
-							<div class="week-schedule-layer absolute" style="background-color: @(period.Color); height: @(heightPixel)px; top: @(topPixel)px;">
+							<div class="week-schedule-layer absolute" style="@*border: 1px solid @string.Format("rgba({0},1)", period.Color);*@ background-color: @string.Format("rgba({0},0.2)", period.Color); height: @(heightPixel)px; top: @(topPixel)px;">
 								<strong class="truncate">@period.Title</strong>
 								<span class="fullwidth displayblock">@period.TimeSpan</span>
 								@if (period.Meeting != null)
@@ -75,7 +75,7 @@
 						else
 						{
 							<div class="week-schedule-layer absolute tooltip" tooltip-title="@period.Title" tooltip-text="@period.TimeSpan"
-								 style="background-color: @(period.Color); height: @(heightPixel)px; top: @(topPixel)px;">
+								 style="@*border: 1px solid @string.Format("rgba({0},1)", period.Color);*@ background-color: @string.Format("rgba({0},0.2)", period.Color); height: @(heightPixel)px; top: @(topPixel)px;">
 								@if (period.Meeting != null)
 								{
 									<div class="icon meeting tooltip floatright" tooltip-text="<div><dl><dt>Subject: </dt><dd> @period.Meeting.Title </dd><dt>Location: </dt><dd> @period.Meeting.Location </dd></dl></div>"></div>
