--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -59,8 +59,8 @@
 				<li class="weekview-day-schedule relative">
 					@foreach (var period in day.Periods)
 					{
-						var topPixel = (Math.Round(scheduleHeight * period.StartPositionPercentage));
-						var bottomPixel = (Math.Round(scheduleHeight * period.EndPositionPercentage));
+						var topPixel = Math.Round(scheduleHeight * period.StartPositionPercentage);
+						var bottomPixel = Math.Round(scheduleHeight * period.EndPositionPercentage);
 						var heightPixel = bottomPixel - topPixel;
 						if (heightPixel > 32)
 						{
@@ -150,9 +150,13 @@
 			}
 		</select>
 	</div>
-	<div class="edit-module-element clearleftfloat floatleft">
-		<input type="checkbox" id="Fullday-check" data-bind="checked:IsFullDay"/>@Resources.FullDay<br />
-	</div>
+	<span class="edit-module-element clearleftfloat floatleft">
+		<input class="clearleftfloat floatleft" type="checkbox" id="Fullday-check" data-bind="checked:IsFullDay"/>
+		<label class="floatleft pdl5" for="Fullday-check">
+			@Resources.FullDay
+		</label>
+	</span>
+	
 	<div class="edit-module-element clearleftfloat">
 		<input id="Schedule-addRequest-ok-button" type="button" class="button mb5 floatright" value="@Html.AttributeEncode(Resources.SubmitRequest)"/>
 	</div>
