--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/WeekView.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/WeekView.css
@@ -130,6 +130,7 @@
 	border-left-width: 8px; */
 	border-top: 1px solid  #f9f9f9;
 	border-bottom: 1px solid #dfdfdf;
+	overflow: hidden;
 }
 .rgba .weekview-day li.third 
 {
@@ -239,6 +240,7 @@ select.absence-input
 	border-radius: 2px;
 	border-left: 0px;
 	background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .6) 100%);
+	overflow: hidden;
 }
 .weekview-day-schedule {
 	width: 131px;
